# redgpu_green_struct

./: CMakeLists.txt  redgpu_green_struct.c  redgpu_green_struct.h
test/: CMakeLists.txt  add.cl  build.bat  test.c
test_vma/: CMakeLists.txt  build.bat  test.c
